Aligned website's profile header and footer to center, fixed footer's background color argument missing a semicolon ;

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -11,7 +11,9 @@ h2,h3 {
 footer {
     padding: 20px;
     color: white;
-    background-color: #00a2c6
+    background-color: #00a2c6;
+    text-align: center;
+    font-weight: bold;
 }
 
 nav a {
@@ -24,4 +26,6 @@ nav a:hover {
     font-weight: bold;
 }
 
-
+.profile header{
+    text-align: center;
+}
